update pagina prodotti e prodotti_intermedi

--- a/chisiamo.html
+++ b/chisiamo.html
@@ -46,7 +46,7 @@
         <h1 class="frase">CHI SIAMO</h1>
     </div>
 
-    <h1 class="sinceText">since2023</h1>
+    <h1 class="sinceText" style="overflow: hidden">since2023</h1>
 
     <div class="sezione_laNostraStoria" style="overflow: hidden">
 
