--- a/prodotti.html
+++ b/prodotti.html
@@ -23,141 +23,145 @@
     <header>
         <nav class="container_navbar">
             <a href="index.html" class="logo_navbar">
-                <img class="logo" src="./Immagini/logo.svg" style="width: 100%; height: 100%">
+                <img class="logo" src="./Immagini/logo.svg" alt="Logo Inda" style="width: 100%; height: 100%">
             </a>
 
-            <!-- hamburger viene visualizzato solamente quando non si è in modalita desktop -->
             <div class="hamburger">
                 <span class="line"></span>
                 <span class="line"></span>
                 <span class="line"></span>
             </div>
 
-            <div class="nav_links">
-                <a class="link_navbar" href="index.html" >Home</a>
+            <div class="container_links">
+                <a class="link_navbar" href="index.html" style="color: #F0B357; text-decoration: underline">Home</a>
                 <a class="link_navbar" href="chisiamo.html">Chi Siamo</a>
                 <a class="link_navbar" href="">ShowRoom</a>
-                <a class="link_navbar" href="prodotti.html" style="color: #F0B357; text-decoration: underline">Prodotti</a>
+                <a class="link_navbar" href="prodotti.html">Prodotti</a>
                 <a class="link_navbar" href="contatti.html">Contatti</a>
             </div>
         </nav>
     </header>
 
-    <div  class="main_img">
-        <h1 class="frase">I nostri prodotti</h1>
+    <div class="container_immagine_principale">
+        <h1 class="frase">I NOSTRI PRODOTTI</h1>
     </div>
 
-    <div class="container_slogan">
-        <h1>Esplora il nostro catalogo</h1>
-        <p>Design senza confini, sicurezza senza compromessi</p>
-    </div>
+    <div class="container_intro">
 
-    <div class="container_paroleChiavi">
-        <div class="container_parolaChiave">
-            <div class="container_immagine_parolaChiave">
-                <img src="Immagini/Prodotti/ImgDesign.jpg" style="width:100%; height: 100%; object-position: center; object-fit: cover">
+        <div class="container_slogan">
+            <h1 class="header_slogan">Esplora il nostro catalogo</h1>
+            <p class="subheader_slogan">Design senza confini, sicurezza senza compromessi</p>
+        </div>
+
+        <div class="container_caratteristiche">
+
+            <div class="container_caratteristica">
+
+                <div class="container_immagine">
+                    <img src="Immagini/Prodotti/ImgDesign.jpg" alt="Immagine Design e Progettazione" style="width:100%; height: 100%; object-position: center; object-fit: cover">
+                </div>
+
+                <div class="container_descrizione">
+                    <h1 class="header_descrizione">
+                        Design e Progettazione
+                    </h1>
+                    <p class="body_descrizione">
+                        Eleganza, raffinatezza e design innovativo. Linee pulite, attenzione ai dettagli e tecnologia all'avanguardia caratterizzano i nostri serramenti. Adatti a ogni stile, dalla classicità all'industrial chic, offrono versatilità architettonica e creatività unica nell'arredamento.
+                    </p>
+                </div>
+
+                <div class="icona_touch">
+                    <img src="Immagini/Prodotti/touch.svg" alt="Icona Touch" style="width:100%; height: 100%; object-position: center; rotate: -45deg;">
+                </div>
+
             </div>
-            <div class="container_descrizione_parolaChiave">
-                <h1>
-                    Design e Progettazione
-                </h1>
-                <p>
-                    Eleganza, raffinatezza e design innovativo. Linee pulite, attenzione ai dettagli e tecnologia all'avanguardia caratterizzano i nostri serramenti. Adatti a ogni stile, dalla classicità all'industrial chic, offrono versatilità architettonica e creatività unica nell'arredamento.
-                </p>
+
+            <div class="container_caratteristica">
+
+                <div class="container_immagine">
+                    <img src="Immagini/Prodotti/ImgEcologia.jpg" alt="Immagine Ecologia" style="width:100%; height: 100%; object-position: center; object-fit: cover">
+                </div>
+
+                <div class="container_descrizione">
+                    <h1 class="header_descrizione">
+                        Ecologia e Risparmio
+                    </h1>
+                    <p class="body_descrizione">
+                        Ci impegniamo a promuovere uno stile di vita eco-sostenibile con i nostri serramenti progettati per massimizzare l'efficienza energetica e ridurre l'impatto ambientale. Utilizziamo materiali riciclabili e tecnologie all'avanguardia per garantire prestazioni ottimali e comfort abitativo, contribuendo così a preservare il nostro prezioso pianeta.
+                    </p>
+                </div>
+
+                <div class="icona_touch">
+                    <img src="Immagini/Prodotti/touch.svg" alt="Icona Touch" style="width:100%; height: 100%; object-position: center; rotate: -45deg;">
+                </div>
+
             </div>
-            <div class="container_touch_icon">
-                <img src="Immagini/Prodotti/touch.svg" style="width:100%; height: 100%; object-position: center; rotate: -45deg;">
+
+            <div class="container_caratteristica">
+
+                <div class="container_immagine">
+                    <img src="Immagini/Prodotti/ImgSicurezza.jpg" alt="Immagine Qualità e Sicurezza" style="width:100%; height: 100%; object-position: center; object-fit: cover">
+                </div>
+
+                <div class="container_descrizione">
+                    <h1 class="header_descrizione">
+                        Sicurezza e Qualità
+                    </h1>
+                    <p class="body_descrizione">
+                        La tua sicurezza è la nostra priorità. I nostri serramenti sono progettati con la massima attenzione alla sicurezza, utilizzando materiali robusti e tecnologie avanzate. Ogni dettaglio è curato per offrire una protezione affidabile per la tua casa. Inoltre, ci impegniamo per garantire la massima qualità in ogni fase, dalla progettazione alla produzione.
+                    </p>
+                </div>
+
+                <div class="icona_touch">
+                    <img src="Immagini/Prodotti/touch.svg" alt="Icona Touch" style="width:100%; height: 100%; object-position: center; rotate: -45deg;">
+                </div>
+
             </div>
         </div>
 
-        <div class="container_parolaChiave">
-            <div class="container_immagine_parolaChiave">
-                <img src="Immagini/Prodotti/ImgEcologia.jpg" style="width:100%; height: 100%; object-position: center; object-fit: cover">
-            </div>
-            <div class="container_descrizione_parolaChiave">
-                <h1>
-                    Ecologia e Risparmio
-                </h1>
-                <p>
-                    Ci impegniamo a promuovere uno stile di vita eco-sostenibile con i nostri serramenti progettati per massimizzare l'efficienza energetica e ridurre l'impatto ambientale. Utilizziamo materiali riciclabili e tecnologie all'avanguardia per garantire prestazioni ottimali e comfort abitativo, contribuendo così a preservare il nostro prezioso pianeta.
-                </p>
-            </div>
-            <div class="container_touch_icon">
-                <img src="Immagini/Prodotti/touch.svg" style="width:100%; height: 100%; object-position: center; rotate: -45deg;">
-            </div>
-        </div>
 
-        <div class="container_parolaChiave">
-            <div class="container_immagine_parolaChiave">
-                <img src="Immagini/Prodotti/ImgSicurezza.jpg" style="width:100%; height: 100%; object-position: center; object-fit: cover">
-            </div>
-            <div class="container_descrizione_parolaChiave">
-                <h1>
-                    Sicurezza e Qualità
-                </h1>
-                <p>
-                    La tua sicurezza è la nostra priorità. I nostri serramenti sono progettati con la massima attenzione alla sicurezza, utilizzando materiali robusti e tecnologie avanzate. Ogni dettaglio è curato per offrire una protezione affidabile per la tua casa. Inoltre, ci impegniamo per garantire la massima qualità in ogni fase, dalla progettazione alla produzione.
-                </p>
-            </div>
-            <div class="container_touch_icon">
-                <img src="Immagini/Prodotti/touch.svg" style="width:100%; height: 100%; object-position: center; rotate: -45deg;">
-            </div>
-        </div>
     </div>
 
-    <div class="sezione_sostenibilità">
-        <h1>> Prodotti Sostenibili</h1>
-    </div>
-
-
+    <div class="container_immagine_divisoria" style="background-image:url(Immagini/Prodotti/img3.jpg)"></div>
 
     <div class="sezione_prodotti" style="overflow: hidden">
 
-        <div class="container_descrizione_prodotto">
-            <h1>
+        <div class="container_descrizione">
+            <h1 class="header_descrizione">
                 Prodotti
             </h1>
-            <p>
+            <p class="body_descrizione">
                 Benvenuti nella nostra collezione di prodotti, un'ode all'eccellenza, all'artigianato italiano e al design senza compromessi. Ogni elemento di questa collezione rappresenta una fusione di eleganza e maestria artigianale. Ci impegniamo a portare avanti la tradizione dell'artigianato italiano, dove la maestria artigiana si unisce alle tecnologie all'avanguardia. Ogni pezzo è frutto di un lavoro accurato, realizzato da esperti artigiani che mettono la loro passione nel creare opere d'arte funzionali. La nostra dedizione alla qualità inizia con la selezione dei materiali. Utilizziamo solo le risorse migliori, dal legno pregiato ai metalli resistenti, garantendo che ogni prodotto_script sia costruito per durare. Ogni dettaglio è curato con precisione, offrendo un prodotto_script che unisce estetica e resistenza. La qualità dei nostri prodotti è la nostra promessa. Siamo così sicuri della durata e della bellezza dei nostri articoli che offriamo una garanzia di soddisfazione completa. La tua casa merita solo il meglio, e con i nostri prodotti, hai la certezza di ottenere qualità, stile e un tocco di eleganza italiana. Scopri la nostra collezione di porte e infissi, dove la qualità incontra l'italianità, e trasforma il tuo spazio in un'esperienza di stile senza tempo.
             </p>
         </div>
 
 
-        <div class="container_tavola_elementi">
-            <img src="Immagini/Prodotti/TavolaMateriali.png" style="width: 100%; height: 100%; object-position: center; object-fit: contain">
+        <div class="container_immagine">
+            <img src="Immagini/Prodotti/TavolaMateriali.png" alt="TavolaProdotti" style="width: 100%; height: 100%; object-position: center; object-fit: contain">
         </div>
 
     </div>
 
+    <div class="container_catalogo"></div>
 
+    <div class="sezione_contattaci" style="overflow: hidden">
 
-    <div class="container_catalogo">
-
-    </div>
-
-
-
-    <div class="container_contattaci" style="overflow: hidden">
-        <div class="container_descrizione_contattaci">
-            <h1>
+        <div class="container_descrizione">
+            <h1 class="header_descrizione">
                 La nostra porta è sempre aperta
             </h1>
-            <p>
+            <p class="body_descrizione">
                 Hai domande sui nostri prodotti o vorresti discutere un progetto con noi? Non esitare, inviaci un'email, ti ricontatteremo il prima possibile.
             </p>
         </div>
         <button onclick="location.href = 'contatti.html'" ontouchstart="location.href = 'contatti.html'" >
             Contattaci
         </button>
+
     </div>
 
-
-
-
-
-
     <footer>
-        <div class="info_container">
+        <div class="container_info">
             <h1 class="footer-header">Dove Siamo</h1>
             <p class="footer-body">Show Room - Via Teilliti 45, 80050, Sant'Antonio Abate (NA)</p>
             <p class="footer-body">Sede Operativa - Via Teilliti 45, 80050, Sant'Antonio Abate (NA)</p>
@@ -165,10 +169,9 @@
             <h1 class="footer-header">Recapiti</h1>
             <p class="footer-body">+39 3394487294</p>
             <p class="footer-body">indainfissi@gmail.com</p>
-            <!--<button class="contattaci_footer">Contattaci</button>-->
         </div>
 
-        <div class="end_container">
+        <div class="social_and_credits_container">
             <div class="social_container">
                 <div class="social">
                     <img src="Immagini/SVG/facebook.svg" alt="facebook_logo" style="width: 100%; height: 100%;">
@@ -181,8 +184,8 @@
                 </div>
             </div>
 
-            <div class="end_footer_container">
-                <h1  style="font-family: Kristi;">Inda <span>spa</span></h1>
+            <div class="credits_container">
+                <h1  style="font-family: Kristi, sans-serif;">Inda <span>spa</span></h1>
                 <p>P.Iva 02607220908</p>
                 <p>Privacy e Cookies Policy</p>
                 <p>Design Angelo Afeltra</p>
@@ -194,7 +197,7 @@
     </footer>
 
 </body>
-<script src="./Script/navbar_effect.js"></script>
+<script src="Script/navbar_script.js"></script>
 <script src="./Script/prodotti_script.js"></script>
-<script src="./Script/Animation/prodotti_animation_script.js"></script>
+<!--<script src="./Script/Animation/prodotti_animation_script.js"></script>-->
 </html>
