update sezione prodotti

--- a/prodotti_intermedia.html
+++ b/prodotti_intermedia.html
@@ -46,7 +46,7 @@
         <h1 class="frase">I NOSTRI PRODOTTI</h1>
     </div>
 
-    <div class="container_catalogo">
+    <div class="container_catalogo" style="margin-top: 5%">
 
     </div>
 
