--- a/prodotto.html
+++ b/prodotto.html
@@ -56,8 +56,7 @@
 
         <h1 class="header_immagine">Alcuni dei nostri lavori</h1>
 
-        <div class="container_immagine_singola">
-
+        <div class="slider">
 
             <div class="container_icona_swipe">
                 <img src="Immagini/Prodotti/swipe.svg" alt="Icon Swipe" style="width: 100%; height: 100%; object-position: center">
@@ -68,15 +67,14 @@
         <div class="mosaico_immagini">
         </div>
 
-        <!--
-        <div class="container_immagine_fullscreen">
+        <div class="container_slider_fullscreen">
 
             <div class="container_immagine">
 
-                <div class="btn_close">
-                    <img src="Immagini/Prodotti/close.svg" alt="Icona Chiudi" style="width: 100%; height: 100%; rotate:180deg;">
-                </div>
+            </div>
 
+            <div class="btn_close">
+                <img src="Immagini/Prodotti/close.svg" alt="Icona Chiudi" style="width: 100%; height: 100%; rotate:180deg;">
             </div>
 
             <div class="btn_dietro">
@@ -88,7 +86,6 @@
             </div>
 
         </div>
-        -->
 
     </div>
 
