update sezione prodotti

--- a/prodotto.html
+++ b/prodotto.html
@@ -58,6 +58,8 @@
 
         <div class="slider">
 
+            <img alt="immagine" class="immagine">
+
             <div class="container_icona_swipe">
                 <img src="Immagini/Prodotti/swipe.svg" alt="Icon Swipe" style="width: 100%; height: 100%; object-position: center">
             </div>
@@ -70,7 +72,6 @@
         <div class="container_slider_fullscreen">
 
             <div class="container_immagine">
-
             </div>
 
             <div class="btn_close">
