animazioni sezione prodotti

--- a/prodotti.html
+++ b/prodotti.html
@@ -58,7 +58,7 @@
             <div class="container_caratteristica">
 
                 <div class="container_immagine">
-                    <img src="Immagini/Prodotti/ImgDesign.jpg" alt="Immagine Design e Progettazione" style="width:100%; height: 100%; object-position: center; object-fit: cover">
+                    <img src="Immagini/Prodotti/ImgDesign.jpg" alt="Immagine Design e Progettazione" style="width:100%; object-position: center; object-fit: cover; box-shadow: 5px 0px 10px black;">
                 </div>
 
                 <div class="container_descrizione">
@@ -79,7 +79,7 @@
             <div class="container_caratteristica">
 
                 <div class="container_immagine">
-                    <img src="Immagini/Prodotti/ImgEcologia.jpg" alt="Immagine Ecologia" style="width:100%; height: 100%; object-position: center; object-fit: cover">
+                    <img src="Immagini/Prodotti/ImgEcologia.jpg" alt="Immagine Ecologia" style="width:100%; object-position: center; object-fit: cover; box-shadow: 5px 0px 10px black;">
                 </div>
 
                 <div class="container_descrizione">
@@ -100,7 +100,7 @@
             <div class="container_caratteristica">
 
                 <div class="container_immagine">
-                    <img src="Immagini/Prodotti/ImgSicurezza.jpg" alt="Immagine Qualità e Sicurezza" style="width:100%; height: 100%; object-position: center; object-fit: cover">
+                    <img src="Immagini/Prodotti/ImgSicurezza.jpg" alt="Immagine Qualità e Sicurezza" style="width:100%; object-position: center; object-fit: cover; box-shadow: 5px 0px 10px black;">
                 </div>
 
                 <div class="container_descrizione">
@@ -199,5 +199,5 @@
 </body>
 <script src="Script/navbar_script.js"></script>
 <script src="./Script/prodotti_script.js"></script>
-<!--<script src="./Script/Animation/prodotti_animation_script.js"></script>-->
+<script src="./Script/Animation/prodotti_animation_script.js"></script>
 </html>
