--- a/prodotto.html
+++ b/prodotto.html
@@ -147,4 +147,5 @@
 </body>
 <script src="Script/navbar_script.js"></script>
 <script src="Script/prodotto_script.js"></script>
+<script src="Script/Animation/prodotto_animation_script.js"></script>
 </html>
